# VectoMark

./: README.md
Path_Planning_Base_Lines/: CMakeLists.txt  README.md  main.cpp
Plane_Obj_Vectorization/: CMakeLists.txt  Plane_Obj_Vectorization.cpp  Plane_Obj_Vectorization.h  README.md  ldbscan.cpp  ldbscan.h  main.cpp  plot_cluster.py  simple_data.h
Plane_Obj_Vectorization/info/res/cluster/: test.csv
Plane_Obj_Vectorization/info/res/erased/: test.csv
Plane_Obj_Vectorization/info/res/loop/: test.csv
